added performance metrics - various fixes

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -25,16 +25,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dev/miniconda3/envs/elicit/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/dev/miniconda3/envs/elicit/lib/python3.9/site-packages/requests/__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.9) or chardet (5.0.0)/charset_normalizer (2.0.12) doesn't match a supported version!\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -47,7 +37,7 @@
     "# Import Extractor class and launch UI function.\n",
     "from elicit import Extractor, launch_ui\n",
     "# Import the Keyword Match Labelling Function.\n",
-    "from elicit.generic_labelling_functions import KeywordMatchLF, SimilarityLabellingFunction\n",
+    "from elicit.generic_labelling_functions import KeywordMatchLF, SimilarityLabellingFunction, NLILabellingFunction, SemanticSearchLF\n",
     "# Import Pathlib, for better path handling.\n",
     "from pathlib import Path\n",
     "# Import OS so we know where the notebook is!\n",
@@ -88,7 +78,7 @@
    ],
    "source": [
     "# delete db if already exists (just for testing purposes)\n",
-    "#(current_dir / \"test_db.sqlite\").unlink(missing_ok=True)\n",
+    "# (current_dir / \"test_db.sqlite\").unlink(missing_ok=True)\n",
     "\n",
     "extractor = Extractor(db_path=current_dir / \"test_db.sqlite\", model_path=current_dir / \"models\", device=0)"
    ]
@@ -159,14 +149,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Registered labelling function: Q&A → NLI Transformer\n",
+      "Registered labelling function: Q&A → Similarity Transformer\n",
       "Registered labelling function: Keyword Match\n",
-      "Registered labelling function: Q&A → Similarity Transformer\n"
+      "Registered labelling function: Semantic Search\n"
      ]
     }
    ],
    "source": [
+    "extractor.register_labelling_function(NLILabellingFunction)\n",
+    "extractor.register_labelling_function(SimilarityLabellingFunction)\n",
     "extractor.register_labelling_function(KeywordMatchLF)\n",
-    "extractor.register_labelling_function(SimilarityLabellingFunction)"
+    "extractor.register_labelling_function(SemanticSearchLF)"
    ]
   },
   {
@@ -187,15 +181,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running LF: Keyword Match\n",
-      "Loading Resources.\n"
+      "Running LF: Q&A → NLI Transformer\n",
+      "Loading Resources.\n",
+      "Fine tuned Sequence Classifier model found, loading...\n",
+      "Fine tuned Q&A model found, loading...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:01<00:00,  1.54it/s]\n"
+      "The model 'RobertaForQuestionAnsweringWithNegatives' is not supported for question-answering. Supported models are ['QDQBertForQuestionAnswering', 'FNetForQuestionAnswering', 'GPTJForQuestionAnswering', 'LayoutLMv2ForQuestionAnswering', 'RemBertForQuestionAnswering', 'CanineForQuestionAnswering', 'RoFormerForQuestionAnswering', 'BigBirdPegasusForQuestionAnswering', 'BigBirdForQuestionAnswering', 'ConvBertForQuestionAnswering', 'LEDForQuestionAnswering', 'DistilBertForQuestionAnswering', 'AlbertForQuestionAnswering', 'CamembertForQuestionAnswering', 'BartForQuestionAnswering', 'MBartForQuestionAnswering', 'LongformerForQuestionAnswering', 'XLMRobertaForQuestionAnswering', 'RobertaForQuestionAnswering', 'SqueezeBertForQuestionAnswering', 'BertForQuestionAnswering', 'XLNetForQuestionAnsweringSimple', 'FlaubertForQuestionAnsweringSimple', 'MegatronBertForQuestionAnswering', 'MobileBertForQuestionAnswering', 'XLMForQuestionAnsweringSimple', 'ElectraForQuestionAnswering', 'ReformerForQuestionAnswering', 'FunnelForQuestionAnswering', 'LxmertForQuestionAnswering', 'MPNetForQuestionAnswering', 'DebertaForQuestionAnswering', 'DebertaV2ForQuestionAnswering', 'IBertForQuestionAnswering', 'SplinterForQuestionAnswering'].\n",
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  5.02it/s]\n"
      ]
     },
     {
@@ -213,7 +210,38 @@
      "output_type": "stream",
      "text": [
       "The model 'RobertaForQuestionAnsweringWithNegatives' is not supported for question-answering. Supported models are ['QDQBertForQuestionAnswering', 'FNetForQuestionAnswering', 'GPTJForQuestionAnswering', 'LayoutLMv2ForQuestionAnswering', 'RemBertForQuestionAnswering', 'CanineForQuestionAnswering', 'RoFormerForQuestionAnswering', 'BigBirdPegasusForQuestionAnswering', 'BigBirdForQuestionAnswering', 'ConvBertForQuestionAnswering', 'LEDForQuestionAnswering', 'DistilBertForQuestionAnswering', 'AlbertForQuestionAnswering', 'CamembertForQuestionAnswering', 'BartForQuestionAnswering', 'MBartForQuestionAnswering', 'LongformerForQuestionAnswering', 'XLMRobertaForQuestionAnswering', 'RobertaForQuestionAnswering', 'SqueezeBertForQuestionAnswering', 'BertForQuestionAnswering', 'XLNetForQuestionAnsweringSimple', 'FlaubertForQuestionAnsweringSimple', 'MegatronBertForQuestionAnswering', 'MobileBertForQuestionAnswering', 'XLMForQuestionAnsweringSimple', 'ElectraForQuestionAnswering', 'ReformerForQuestionAnswering', 'FunnelForQuestionAnswering', 'LxmertForQuestionAnswering', 'MPNetForQuestionAnswering', 'DebertaForQuestionAnswering', 'DebertaV2ForQuestionAnswering', 'IBertForQuestionAnswering', 'SplinterForQuestionAnswering'].\n",
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  7.21it/s]\n"
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00, 10.46it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running LF: Keyword Match\n",
+      "Loading Resources.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:01<00:00,  1.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running LF: Semantic Search\n",
+      "Loading Resources.\n",
+      "Fine tuning similarity model found, loading...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  8.19it/s]\n"
      ]
     }
    ],
@@ -232,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +285,139 @@
    ],
    "source": [
     "launch_ui(extractor=extractor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating confidence scores.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "576665aa040d499ab7c4112a73a8d373",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fabef83ad9d64340a75edb10eadaaf21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "def1f4c67c2e4a70b02985382f019239",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c63ddbd37e94f00be249fa722384688",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'cat_or_dog': 0.0}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extractor.sort(method=\"weasul\")\n",
+    "extractor.performance(performance_type=\"confidence\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m/home/dev/Turing/elicit/database/db_utils.py\u001b[0m(37)\u001b[0;36mquery_db\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m     35 \u001b[0;31m    \u001b[0;34m:\u001b[0m\u001b[0;32mreturn\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m \u001b[0mof\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     36 \u001b[0;31m    \"\"\"\n",
+      "\u001b[0m\u001b[0;32m---> 37 \u001b[0;31m    \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     38 \u001b[0;31m    \u001b[0mrv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     39 \u001b[0;31m    \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "> \u001b[0;32m/home/dev/Turing/elicit/user_interface/server/sorting.py\u001b[0m(13)\u001b[0;36mset_value_confidence\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m     11 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     12 \u001b[0;31m\u001b[0;32mdef\u001b[0m \u001b[0mset_value_confidence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvariable_id\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfidence\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m---> 13 \u001b[0;31m    query_db(\n",
+      "\u001b[0m\u001b[0;32m     14 \u001b[0;31m        db, f\"UPDATE extraction SET value_confidence={'NULL' if confidence == '?' else confidence} WHERE variable_id={variable_id}\")\n",
+      "\u001b[0m\u001b[0;32m     15 \u001b[0;31m    \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "*** SyntaxError: unexpected EOF while parsing\n",
+      "array([0.72447455, 0.22928038, 0.15103534, 0.22571978, 0.72412279,\n",
+      "       0.15103534, 0.72447455, 0.72412279, 0.72447455, 0.72412279,\n",
+      "       0.72447455, 0.72412279, 0.72447455, 0.72412279])\n",
+      "0     0\n",
+      "1     1\n",
+      "2     2\n",
+      "3     3\n",
+      "4     4\n",
+      "5     5\n",
+      "6     0\n",
+      "7     4\n",
+      "8     0\n",
+      "9     4\n",
+      "10    0\n",
+      "11    4\n",
+      "12    0\n",
+      "13    4\n",
+      "Name: id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "%debug"
    ]
   },
   {
